--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath/>
 	</parent>
 	<groupId>ru.egorov</groupId>
 	<artifactId>StoreCrawler</artifactId>
@@ -14,7 +14,7 @@
 	<name>StoreCrawler</name>
 	<description>Application for crawling store pages</description>
 	<properties>
-		<java.version>14</java.version>
+		<java.version>19</java.version>
 		<mapstruct.version>1.5.3.Final</mapstruct.version>
 		<lombok.version>1.18.24</lombok.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -85,8 +85,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
 				<configuration>
-					<source>14</source>
-					<target>14</target>
+					<source>19</source>
+					<target>19</target>
 					<annotationProcessorPaths>
 						<path>
 							<groupId>org.mapstruct</groupId>
